@@ -10,14 +10,17 @@ function main {
 		return "${LIFERAY_COMMON_EXIT_CODE_SKIPPED}"
 	fi
 
-	test_set_jdk_version
+	test_set_jdk_version_and_parameters
 
 	tear_down
 }
 
 function set_up {
 	export _CURRENT_JAVA_HOME="${JAVA_HOME}"
+	export _CURRENT_JAVA_OPTS="${JAVA_OPTS}"
 	export _CURRENT_PATH="${PATH}"
+	export _JDK_PARAMETERS_8="${JAVA_OPTS} -XX:MaxPermSize=256m"
+	export _JDK_PARAMETERS_17=$(echo "${JAVA_OPTS}" | sed "s/-XX:MaxPermSize=[^ ]*//g")
 
 	export _JDK_VERSION_8="zulu8"
 
@@ -26,9 +29,9 @@ function set_up {
 		_JDK_VERSION_8="jdk8"
 	fi
 
-	export _JDK_VERSION_17="zulu17"
+	export _JDK_VERSION_17="openjdk17"
 
-	if [ ! -d "/opt/java/zulu17" ]
+	if [ ! -d "/opt/java/openjdk17" ]
 	then
 		_JDK_VERSION_17="jdk17"
 	fi
@@ -46,29 +49,41 @@ function tear_down {
 	PATH="${_CURRENT_PATH}"
 
 	unset _CURRENT_JAVA_HOME
+	unset _CURRENT_JAVA_OPTS
 	unset _CURRENT_PATH
+	unset _JDK_PARAMETERS_8
+	unset _JDK_PARAMETERS_17
 	unset _JDK_VERSION_8
 	unset _JDK_VERSION_17
 }
 
-function test_set_jdk_version {
-	_test_set_jdk_version "2024.q2.0" "/opt/java/${_JDK_VERSION_8}"
-	_test_set_jdk_version "2025.q1.0" "/opt/java/${_JDK_VERSION_17}"
-	_test_set_jdk_version "7.3.10-u36" "/opt/java/${_JDK_VERSION_8}"
-	_test_set_jdk_version "7.4.3-ga131" "/opt/java/${_JDK_VERSION_8}"
-	_test_set_jdk_version "7.4.3-ga132" "/opt/java/${_JDK_VERSION_17}"
-	_test_set_jdk_version "7.4.13-u131" "/opt/java/${_JDK_VERSION_8}"
-	_test_set_jdk_version "7.4.13-u132" "/opt/java/${_JDK_VERSION_17}"
+function test_set_jdk_version_and_parameters {
+	_test_set_jdk_version_and_parameters "2024.q2.0" "/opt/java/${_JDK_VERSION_8}" "${_JDK_PARAMETERS_8}"
+
+	JAVA_OPTS="-XX:MaxPermSize=256m"
+
+	_test_set_jdk_version_and_parameters "2024.q3.0" "/opt/java/${_JDK_VERSION_8}" "${JAVA_OPTS}"
+
+	_test_set_jdk_version_and_parameters "2025.q1.0" "/opt/java/${_JDK_VERSION_17}" "${_JDK_PARAMETERS_17}"
+	_test_set_jdk_version_and_parameters "7.3.10-u36" "/opt/java/${_JDK_VERSION_8}" "${_JDK_PARAMETERS_8}"
+	_test_set_jdk_version_and_parameters "7.4.3-ga131" "/opt/java/${_JDK_VERSION_8}" "${_JDK_PARAMETERS_8}"
+	_test_set_jdk_version_and_parameters "7.4.3-ga132" "/opt/java/${_JDK_VERSION_17}" "${_JDK_PARAMETERS_17}"
+	_test_set_jdk_version_and_parameters "7.4.13-u131" "/opt/java/${_JDK_VERSION_8}" "${_JDK_PARAMETERS_8}"
+	_test_set_jdk_version_and_parameters "7.4.13-u132" "/opt/java/${_JDK_VERSION_17}" "${_JDK_PARAMETERS_17}"
 }
 
-function _test_set_jdk_version {
+function _test_set_jdk_version_and_parameters {
 	_PRODUCT_VERSION="${1}"
 
-	echo -e "Running _test_set_jdk_version for ${_PRODUCT_VERSION}\n"
+	echo -e "Running _test_set_jdk_version_and_parameters for ${_PRODUCT_VERSION}\n"
 
-	set_jdk_version 1> /dev/null
+	set_jdk_version_and_parameters 1> /dev/null
 
-	assert_equals "${JAVA_HOME}" "${2}"
+	assert_equals \
+		"${JAVA_HOME}" "${2}" \
+		"${JAVA_OPTS}" "${3}"
+
+	JAVA_OPTS="${_CURRENT_JAVA_OPTS}"
 }
 
 main
